--- a/012-datatables/DESCRIPTION
+++ b/012-datatables/DESCRIPTION
@@ -2,6 +2,6 @@ Title: DataTables Demo
 Author: RStudio, Inc.
 AuthorUrl: http://www.rstudio.com/
 License: MIT
-DisplayMode: Showcase
+DisplayMode: Normal
 Tags: datatables
 Type: Shiny
