--- a/002-text/DESCRIPTION
+++ b/002-text/DESCRIPTION
@@ -2,7 +2,7 @@ Title: Shiny Text
 Author: RStudio, Inc.
 AuthorUrl: http://www.rstudio.com/
 License: MIT
-DisplayMode: Showcase
+DisplayMode: Normal
 Tags: getting-started
 Type: Shiny
 
